--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,18 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://smbl64.github.io'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Mohammad Banisaeid'
+theme = 'm10c'
+
+[params]
+author = "Mohammad Banisaeid"
+description = "My notes on tech and whatnot!"
+
+[[params.social]]
+  icon = "github"
+  name = "GitHub"
+  url = "https://github.com/smbl64"
+
+[[params.social]]
+  icon = "linkedin"
+  name = "LinkedIn"
+  url = "https://www.linkedin.com/in/mbanisaeid/"
