--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseURL = 'https://smbl64.github.io'
 languageCode = 'en-us'
 title = 'Mohammad Banisaeid'
 theme = 'm10c'
+publishDir = "docs"
 
 [params]
 author = "Mohammad Banisaeid"
