Add github link

--- a/config.yaml
+++ b/config.yaml
@@ -29,11 +29,15 @@ menu:
     - identifier: archive
       name: Archive
       url: /archive/
-      weight: 20
+      weight: 1
     - identifier: tags
       name: Tags
       url: /tags/
-      weight: 20
+      weight: 2
+    - identifier: github
+      name: GitHub
+      url: https://www.github.com/smbl64
+      weight: 3
 
 markup:
   highlight:
