Use hugo chroma for syntax highlighting

--- a/config.yaml
+++ b/config.yaml
@@ -2,14 +2,15 @@ baseURL: 'https://banisaeid.com'
 languageCode: 'en-us'
 title: 'Mohammad Banisaeid'
 theme: 'PaperMod'
-pygmentsUseClasses: true
-enableEmoji: true
 
 minify:
     disableXML: true
     minifyOutput: true
 
 params:
+  assets:
+      disableHLJS: true
+
   env: "production"
   author: "Mohammad Banisaeid"
   description: "My notes on tech and whatnot!"
